infra/k8s/comment-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: comment-srv
spec:
  type: ClusterIP
  selector:
    app: comment
  ports:
    - name: comment
      protocol: TCP
      port: 5001
      targetPort: 5001
