infra/k8s/event-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: event-srv
spec:
  type: ClusterIP
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 6000
      targetPort: 6000
