infra/k8s/post-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: post-srv
spec:
  type : NodePort
  selector:
    app: post
  ports:
    - name: post
      protocol: TCP
      port: 5000
      targetPort: 5000
